# Avance-amazon-2.0

./: README.md  appication.py  applicatione.py  carrito.css  carrito.html  config.py  hola.html  index.css  index.html  register.html  sig-in.html  store5.css  store5.html  style.css  style2.css  user.py
database/: connection.py  setup.py  tasks.py
database/sql/: tables.sql
modelos/: model_user.py
modelos/entidades/: user.py
poetry_dbp/: .flake8  pyproject.toml
poetry_dbp/poetry_dbp/: prueba_flake.py
poetry_dbp/tests/: test_poetry_dbp.py
resources/: tasks.py
static/: carrito.css  code.js  home.css  jv.css  login.css  register.css  slider.js  store5.css  style-sigin.css
templates/: actualizar_datos.html  base.html  carrito.html  home.html  layout.html  login.html  menu.html  register.html  sig-in.html
templates/auth/: carrito.html  home.html  register.html  sig-in.html  store5.html
